--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "CallumAltham/callumaltham.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "staff photo.jpg"
+  name             : "Callum Altham"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Liverpool, England, UK"
+  employer         : "Edge Hill University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "althamc@edgehill.ac.uk" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
