--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Short biography for the left-hand sidebar"
   location         : "Liverpool, England, UK"
   employer         : "Edge Hill University"
-  uri              : # URL
+  uri              : "research.edgehill.ac.uk/en/persons/callum-altham"
   email            : "althamc@edgehill.ac.uk" 
 
   # Academic websites
