--- a/_config.yml
+++ b/_config.yml
@@ -32,12 +32,12 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=hD_mltMAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0002-9066-6054"
   semantic         : # URL
   pubmed           : #
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Callum-Altham"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
