--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "staff photo.jpg"
   name             : "Callum Altham"
-  pronouns         : # example: "she/her"  
+  pronouns         : "BSc. (Hons), MSc, AFHEA" # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Liverpool, England, UK"
   employer         : "Edge Hill University"
