--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "BSc. (Hons), MSc, AFHEA" # example: "she/her"  
   bio              : "PhD Candidate in Computer Informatics and Graduate Teaching Assistant at Edge Hill University"
   location         : "Liverpool, England, UK"
-  employer         : "[Edge Hill University](https://edgehill.ac.uk)"
+  employer         : "Edge Hill University"
   uri              : "https://research.edgehill.ac.uk/en/persons/callum-altham"
   email            : "althamc@edgehill.ac.uk" 
 
