--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,10 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-        
+
+  - title: "Employment History"
+    url: /employment/
+
   # - title: "Blog Posts"
   #   url: /year-archive/
 
